--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-commonjs",
     "typeorm-d": "typeorm-ts-node-commonjs -d ./src/config/typeorm.config.ts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "compodoc:serve": "npx @compodoc/compodoc -p tsconfig.json -s -r 4545 -d ./compodoc"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -48,6 +49,7 @@
     "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
+    "@compodoc/compodoc": "^1.1.19",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
